[package]
name = "acurast-common"
version = "0.1.1"
license = "MIT"
homepage = "https://docs.acurast.com/"
repository = "https://github.com/Acurast/acurast-core"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.2.0", features = ["derive"], default-features = false }
# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.41" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.41" }
# Attestation
asn1 = { version = "0.11.0", default-features = false, features = ["derive"], optional = true }
p256 = { git = "https://github.com/Acurast/elliptic-curves", default-features = false, features = ["ecdsa", "sha256"], optional = true }
p384 = { package = "p384_vendored", path = "../p384", default-features = false, features = ["ecdsa", "arithmetic", "expose-field"], optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }
num-bigint = { version = "0.4.3", default-features = false, optional = true }
ecdsa-vendored = { package = "ecdsa_vendored", path = "../p384/ecdsa", default-features = false, optional = true }
serde = { version = "1.0.136", optional = true, features = ["derive"] }

[dev-dependencies]
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "sp-std/std",
    "codec/std",
    "scale-info/std",
    "serde",
]
attestation = [
    "asn1",
    "p256",
    "p384",
    "sha2",
    "num-bigint",
    "ecdsa-vendored",
]
